--- a/Project_NT/.vscode/settings.json
+++ b/Project_NT/.vscode/settings.json
@@ -52,5 +52,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "UnityVRProject_DM.sln"
+    "dotnet.defaultSolution": "Project_NT.sln"
 }
