--- a/Project_NT/.gitignore
+++ b/Project_NT/.gitignore
@@ -72,4 +72,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+# External Path
+/[Aa]ssets/External/
+
 *.vscode
